data/derived/sp14/progs/unify/prog1854.ml.out
Characters 42-43:
  let f a x = fun a -> x a + x in
                             ^
Error: This expression has type 'a -> int
       but an expression was expected of type int
